; ModuleID = '/home/carl/AnghaBench/jq/src/extr_jv_alloc.c_jv_mem_strdup.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_jv_alloc.c_jv_mem_strdup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @jv_mem_strdup(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i8* @strdup(i8* %4)
  store i8* %5, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %10, label %8

8:                                                ; preds = %1
  %9 = call i32 (...) @memory_exhausted()
  br label %10

10:                                               ; preds = %8, %1
  %11 = load i8*, i8** %3, align 8
  ret i8* %11
}

declare dso_local i8* @strdup(i8*) #1

declare dso_local i32 @memory_exhausted(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
